--- a/serial/Makefile
+++ b/serial/Makefile
@@ -3,19 +3,19 @@ LINK = $(CXX)
 EXE = nbody_simulation
 CXXFLAGS = -O3 -std=c++11
 
-#CXXFLAGS += -g -DVERBOSE
+CXXFLAGS += -g -DVERBOSE
 
 SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
 
-OBJ_ROOT = nbody.o 
+OBJ_ROOT = nbody.o
 
 default: $(EXE)
 
 $(EXE): $(OBJ) $(OBJ_ROOT)
 	$(LINK) $(OBJ) $(CXXFLAGS) -o $@
 
-%.o: %.cpp 
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $<
 
 clean:
